--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/iintecco/scintec.iintec.com/application
+    - export DEPLOYPATH=/home/iintecco/scintec.iintec.com
     - /bin/cp -R application $DEPLOYPATH
