--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/iintecco/scintec.iintec.com
-    - /bin/cp -R application $DEPLOYPATH
+    - /bin/cp -R * $DEPLOYPATH
