--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /application/logs/
 /Certificados/
+/FotoUsuario/
 /archivos/
 /aplication/config/database.php
 index.php
 /vendor
 application/config/database.php
+FotoUsuario
